--- a/Output/Whisler_ENV872_Project.Rmd
+++ b/Output/Whisler_ENV872_Project.Rmd
@@ -37,7 +37,12 @@ read.csv("~/Whisler_ENV872_EDA_FinalProject/Data/Processed/clean_data.csv")
 
 # Rationale and Research Questions
 
-As temperatures continue to destabilize across the globe in response to greenhouse gas emissions, certain areas have been
+As temperatures continue to destabilize across the globe in response to greenhouse gas emissions, certain areas have been 
+subjected to weather phenomena of increased duration and intensity. Among these regions unfortunate enough to be facing the brunt of climate change is the state of California on the western coast of the United States. According to the California Coastal Commission, "climate change is expected to continue shifting and intensifying weather patterns around the globe. In California, events such as El Niño and extended drought are of particular concern." As a result, shifts in water temperature are also likely to occur, which can have devastating impacts on coastal ecosystems.
+
+This project examines empirical temperature and precipitation data from the year 2022 and seeks to analyze fluctuations in temperature, as well as determine if there is a correlation between water temperature and extreme weather events that cause dramatic increases in precipitation.
+
+
 
 
 \newpage
